--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Windows Desktop"
+name="Sonic Dodge Kaizo"
 platform="Windows Desktop"
 runnable=true
 dedicated_server=false
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Users/NETUSER/Desktop/Forbidden/Sonic Dodge/Sonic Dodge.exe"
+export_path="../../../Users/NETUSER/Desktop/Forbidden/Sonic Dodge Kaizo/Sonic Dodge.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
